<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>global_loc</name>
  <version>0.0.0</version>
  <description>The global_loc package</description>
  <maintainer email="psarlin@student.ethz.ch">Paul-Edouard Sarlin</maintainer>
  <maintainer email="fdebrain@student.ethz.ch">Frederic Debraine</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>opencv3_catkin</depend>
  <depend>tensorflow_catkin</depend>
  <depend>protobuf_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>maplab_common</depend>
  <depend>eigen_catkin</depend>
  <depend>vi_map</depend>
  <depend>posegraph</depend>
  <depend>aslam_cv_frames</depend>
  <depend>aslam_cv_common</depend>
  <depend>libnabo</depend>
  <depend>minkindr</depend>
</package>
